--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27,423</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">24,171</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">tests.android.LoginTest</td><td><a href="#m0">invalidLogin_Test</a></td><td rowspan="2">1708845044376</td><td rowspan="2">3344</td></tr><tr class="passedeven"><td><a href="#m1">invalidLogin_Test</a></td></tr><tr class="passedeven"><td><a href="#m2">invalidLogin_emptyPasswordTest</a></td><td rowspan="1">1708845041104</td><td rowspan="1">3268</td></tr><tr class="passedeven"><td><a href="#m3">invalidLogin_emptyUserNameTest</a></td><td rowspan="1">1708845035950</td><td rowspan="1">5149</td></tr><tr class="passedeven"><td><a href="#m4">validLoginTest</a></td><td rowspan="1">1708845050579</td><td rowspan="1">2773</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.android.ProductsTest</td><td><a href="#m0">ProductsValidateTest</a></td><td rowspan="1">1708850066878</td><td rowspan="1">14374</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tests.android.LoginTest#invalidLogin_Test</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>bob@example.com</td><td>1234</td><td>Provided credentials do not match any user in this service.</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.android.LoginTest#invalidLogin_Test</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>bob@example</td><td>10203040</td><td>Provided credentials do not match any user in this service.</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">tests.android.LoginTest#invalidLogin_emptyPasswordTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">tests.android.LoginTest#invalidLogin_emptyUserNameTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">tests.android.LoginTest#validLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.android.ProductsTest#ProductsValidateTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
