--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Chan\AppData\Local\Temp\testng-eclipse--34279448\testng-customsuite.xml</span>
+                    <span>C:\Users\Chan\AppData\Local\Temp\testng-eclipse-1098795599\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.android.LoginTest" class="method navigator-link" hash-for-method="invalidLogin_Test(bob@example.com, 1234, Provided credentials do not match any user in this service.)">invalidLogin_Test(bob@example.com, 1234, Provided credentials do not match any user in this service.)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.android.LoginTest" class="method navigator-link" hash-for-method="invalidLogin_Test(bob@example, 10203040, Provided credentials do not match any user in this service.)">invalidLogin_Test(bob@example, 10203040, Provided credentials do not match any user in this service.)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.android.LoginTest" class="method navigator-link" hash-for-method="invalidLogin_emptyPasswordTest">invalidLogin_emptyPasswordTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.android.LoginTest" class="method navigator-link" hash-for-method="invalidLogin_emptyUserNameTest">invalidLogin_emptyUserNameTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.android.LoginTest" class="method navigator-link" hash-for-method="validLoginTest">validLoginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.android.ProductsTest" class="method navigator-link" hash-for-method="ProductsValidateTest">ProductsValidateTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,44 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.android.LoginTest</span>
+              <span class="class-name">tests.android.ProductsTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="invalidLogin_Test(bob@example.com, 1234, Provided credentials do not match any user in this service.)">
-                  </a> <!-- invalidLogin_Test(bob@example.com, 1234, Provided credentials do not match any user in this service.) -->
-                  <span class="method-name">invalidLogin_Test</span>
-                  <span class="parameters">(bob@example.com, 1234, Provided credentials do not match any user in this service.)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="invalidLogin_Test(bob@example, 10203040, Provided credentials do not match any user in this service.)">
-                  </a> <!-- invalidLogin_Test(bob@example, 10203040, Provided credentials do not match any user in this service.) -->
-                  <span class="method-name">invalidLogin_Test</span>
-                  <span class="parameters">(bob@example, 10203040, Provided credentials do not match any user in this service.)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="invalidLogin_emptyPasswordTest">
-                  </a> <!-- invalidLogin_emptyPasswordTest -->
-                  <span class="method-name">invalidLogin_emptyPasswordTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="invalidLogin_emptyUserNameTest">
-                  </a> <!-- invalidLogin_emptyUserNameTest -->
-                  <span class="method-name">invalidLogin_emptyUserNameTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="validLoginTest">
-                  </a> <!-- validLoginTest -->
-                  <span class="method-name">validLoginTest</span>
+                  <a name="ProductsValidateTest">
+                  </a> <!-- ProductsValidateTest -->
+                  <span class="method-name">ProductsValidateTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -187,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Chan\AppData\Local\Temp\testng-eclipse--34279448\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Chan\AppData\Local\Temp\testng-eclipse-1098795599\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -196,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.android.LoginTest&quot;/&gt;
+      &lt;class name=&quot;tests.android.ProductsTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -236,32 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'invalidLogin_emptyUserNameTest')
-data.setCell(0, 2, 'tests.android.LoginTest')
-data.setCell(0, 3, 5149);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'invalidLogin_Test')
-data.setCell(1, 2, 'tests.android.LoginTest')
-data.setCell(1, 3, 3344);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'invalidLogin_emptyPasswordTest')
-data.setCell(2, 2, 'tests.android.LoginTest')
-data.setCell(2, 3, 3268);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'invalidLogin_Test')
-data.setCell(3, 2, 'tests.android.LoginTest')
-data.setCell(3, 3, 2856);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'validLoginTest')
-data.setCell(4, 2, 'tests.android.LoginTest')
-data.setCell(4, 3, 2773);
+data.setCell(0, 1, 'ProductsValidateTest')
+data.setCell(0, 2, 'tests.android.ProductsTest')
+data.setCell(0, 3, 14374);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -287,62 +221,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.android.LoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.android.ProductsTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">serverStart</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">launchApp</span>
-                <span class="method-start">2116 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="configuration-class before">
-                <span class="method-name">setup</span>
-                <span class="method-start">9618 ms</span>
+                <span class="method-start">2524 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">invalidLogin_emptyUserNameTest</span>
-                <span class="method-start">12123 ms</span>
+                <span class="method-name">ProductsValidateTest</span>
+                <span class="method-start">12301 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">closeApp([TestResult name=invalidLogin_emptyUserNameTest status=SUCCESS method=LoginTest.invalidLogin_emptyUs...)</span>
-                <span class="method-start">17275 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">invalidLogin_emptyPasswordTest</span>
-                <span class="method-start">17277 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeApp([TestResult name=invalidLogin_emptyPasswordTest status=SUCCESS method=LoginTest.invalidLogin_emptyPa...)</span>
-                <span class="method-start">20546 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">invalidLogin_Test(bob@example.com, 1234, Provided credentials do not match any user in this service.)</span>
-                <span class="method-start">20549 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">invalidLogin_Test(bob@example, 10203040, Provided credentials do not match any user in this service.)</span>
-                <span class="method-start">23895 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeApp([TestResult name=invalidLogin_Test status=SUCCESS method=LoginTest.invalidLogin_Test(java.lang.Strin...)</span>
-                <span class="method-start">23895 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method after">
-                <span class="method-name">closeApp([TestResult name=invalidLogin_Test status=SUCCESS method=LoginTest.invalidLogin_Test(java.lang.Strin...)</span>
-                <span class="method-start">26752 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">validLoginTest</span>
-                <span class="method-start">26752 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeApp([TestResult name=validLoginTest status=SUCCESS method=LoginTest.validLoginTest()[pri:4, instance:tes...)</span>
-                <span class="method-start">29526 ms</span>
+                <span class="method-name">closeApp([TestResult name=ProductsValidateTest status=SUCCESS method=ProductsTest.ProductsValidateTest()[pri:...)</span>
+                <span class="method-start">26678 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">serverStop</span>
-                <span class="method-start">29560 ms</span>
+                <span class="method-start">26719 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
