--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f96a2">  <td>24/02/25 19:12:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAndPostExamples.testPost()[pri:0, instance:tests.android.GetAndPostExamples@393671df]">testPost</td> 
+<tr bgcolor="9f96a2">  <td>24/02/25 23:22:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Todoits.CreateTask()[pri:0, instance:tests.android.Todoits@1ab3a8c8]">CreateTask</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
